# Cargo.toml
[package]
name = "ttd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
xdg = "2.5"
strsim = "0.10"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.3"
toml = "0.8"
termcolor = "1.2"



